Bug 1170665 - Disable the windows segfault popup in the shell. r=jandem, a=NPOTB

--HG--
extra : transplant_source : %DC3%E7t%E5m%24%B4%E7%C4%FA%99%9D%A0%BB%C2%04o%13%7E